fix: layout spacing

--- a/src/components/Layout/styles.module.css
+++ b/src/components/Layout/styles.module.css
@@ -2,7 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 2rem;
-    
-    height: 100vh;
+    margin: 2rem 0;
+}
+
+.layout > p {
+    margin-top: 1rem;
 }
